// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Package.json exports support > should build app package for both web and native targets > native-optimized 1`] = `
"import {
  Adapt,
  Anchor,
  Button,
  type FontSizeTokens,
  getFontSize,
  H1,
  Label,
  Paragraph,
  Select,
  type SelectProps,
  Separator,
  Sheet,
  toast,
  XStack,
  YStack,
} from '@my/ui'
import { SwitchRouterButton } from '@my/ui/components/SwitchRouterButton'
import { SwitchThemeButton } from '@my/ui/components/SwitchThemeButton'
import { LinearGradient } from '@tamagui/linear-gradient'
import { Activity, Check, ChevronDown, ChevronUp } from '@tamagui/lucide-icons-2'
import React, { useState } from 'react'
import { Platform } from 'react-native'
import { useLink } from 'solito/navigation'

export function SelectDemo() {
  return (
    <__TamaguiNativeView style={__TamaguiNativeStyle658._ ?? __TamaguiNativeStyle658()}>
      <__TamaguiNativeView style={__TamaguiNativeStyle681._ ?? __TamaguiNativeStyle681()}  >
        <Label htmlFor="select-demo-1" flex={1} minW={80}>
          Custom
        </Label>
        <SelectDemoItem id="select-demo-1" />
      </__TamaguiNativeView>

      <__TamaguiNativeView style={__TamaguiNativeStyle890._ ?? __TamaguiNativeStyle890()}  >
        <Label htmlFor="select-demo-2" flex={1} minW={80}>
          Native
        </Label>
        <SelectDemoItem id="select-demo-2" native />
      </__TamaguiNativeView>
    </__TamaguiNativeView>
  )
}

export function SelectDemoItem(props: SelectProps & { trigger?: React.ReactNode }) {
  const [val, setVal] = React.useState('apple')

  return (
    <Select
      value={val}
      onValueChange={setVal}
      disablePreventBodyScroll
      zIndex={200000}
      {...props}
    >
      {props?.trigger || (
        <Select.Trigger maxWidth={220} iconAfter={ChevronDown}>
          <Select.Value placeholder="Something" />
        </Select.Trigger>
      )}

      <Adapt when="maxMd" platform="touch">
        <Sheet native={!!props.native} modal dismissOnSnapToBottom transition="medium">
          <Sheet.Container>
            <Sheet.Background />
            <Sheet.ScrollView>
              <Adapt.Contents />
            </Sheet.ScrollView>
          </Sheet.Container>
          <Sheet.Overlay
            backgroundColor="shadow-color"
            transition="lazy"
            opacity="enter:0 exit:0"
          />
        </Sheet>
      </Adapt>

      <Select.Content>
        <Select.ScrollUpButton
          items="center"
          justify="center"
          position="relative"
          width="100%"
          height="3"
        >
          <__TamaguiNativeView style={__TamaguiNativeStyle2277._ ?? __TamaguiNativeStyle2277()}>
            <ChevronUp size={20} />
          </__TamaguiNativeView>
          <LinearGradient
            start={[0, 0]}
            end={[0, 1]}
            position="absolute"
            inset={0}
            colors={['background', 'transparent']}
          />
        </Select.ScrollUpButton>

        <Select.Viewport
          // to do animations:
          // transition="quick"
          // animateOnly={['transform', 'opacity']}
          // opacity="enter:0 exit:0"
          // y="enter:-10px exit:10px"
          minW={200}
        >
          <Select.Group>
            <Select.Label>Fruits</Select.Label>
            {/* for longer lists memoizing these is useful */}
            {React.useMemo(
              () =>
                items.map((item, i) => {
                  return (
                    <Select.Item
                      index={i}
                      key={item.name}
                      value={item.name.toLowerCase()}
                    >
                      <Select.ItemText>{item.name}</Select.ItemText>
                      <Select.ItemIndicator marginLeft="auto">
                        <Check size={16} />
                      </Select.ItemIndicator>
                    </Select.Item>
                  )
                }),
              [items]
            )}
          </Select.Group>
          {/* Native gets an extra icon */}
          {props.native && (
            <__TamaguiNativeView
              style={__TamaguiNativeStyle3703._ ?? __TamaguiNativeStyle3703()}







            >
              <ChevronDown size={getFontSize((props.size as FontSizeTokens) ?? true)} />
            </__TamaguiNativeView>
          )}
        </Select.Viewport>

        <Select.ScrollDownButton
          items="center"
          justify="center"
          position="relative"
          width="100%"
          height="3"
        >
          <__TamaguiNativeView style={__TamaguiNativeStyle4269._ ?? __TamaguiNativeStyle4269()}>
            <ChevronDown size={20} />
          </__TamaguiNativeView>
          <LinearGradient
            start={[0, 0]}
            end={[0, 1]}
            position="absolute"
            inset={0}
            colors={['transparent', 'background']}
          />
        </Select.ScrollDownButton>
      </Select.Content>
    </Select>
  )
}

const items = [
  { name: 'Apple' },
  { name: 'Pear' },
  { name: 'Blackberry' },
  { name: 'Peach' },
  { name: 'Apricot' },
  { name: 'Melon' },
  { name: 'Honeydew' },
  { name: 'Starfruit' },
  { name: 'Blueberry' },
  { name: 'Raspberry' },
  { name: 'Strawberry' },
  { name: 'Mango' },
  { name: 'Pineapple' },
  { name: 'Lime' },
  { name: 'Lemon' },
  { name: 'Coconut' },
  { name: 'Guava' },
  { name: 'Papaya' },
  { name: 'Orange' },
  { name: 'Grape' },
  { name: 'Jackfruit' },
  { name: 'Durian' },
]

export function HomeScreen({ pagesMode = false }: { pagesMode?: boolean }) {
  const linkTarget = pagesMode ? '/pages-example-user' : '/user'
  const linkProps = useLink({
    href: \`\${linkTarget}/nate\`,
  })

  return (
    <__TamaguiStableView5363      >
      <XStack
        position="absolute sm:relative"
        width="100%"
        t="6 sm:0px"
        gap="6"
        justify="center"
        flexWrap="wrap"
      >
        {Platform.OS === 'web' && (
          <>
            <SwitchRouterButton pagesMode={pagesMode} />
            <SwitchThemeButton />
          </>
        )}
      </XStack>

      <SelectDemo />

      <__TamaguiNativeView style={__TamaguiNativeStyle5822._ ?? __TamaguiNativeStyle5822()}>
        <Button
          size="3"
          iconAfter={
            <Button.Icon>
              <Activity />
            </Button.Icon>
          }
        >
          <Button.Text>Inverse</Button.Text>
        </Button>
      </__TamaguiNativeView>
      <__TamaguiNativeView style={__TamaguiNativeStyle6083._ ?? __TamaguiNativeStyle6083()}>
        <__TamaguiStableText6108  >
          Welcome to Tamagui.
        </__TamaguiStableText6108>
        <__TamaguiStableText6195  >
          Here's a basic starter to show navigating from one screen to another.
        </__TamaguiStableText6195>
        <__TamaguiStableView6346 />
        <__TamaguiStableText6368 >
          This screen uses the same code on Next.js and React Native.
        </__TamaguiStableText6368>
        <__TamaguiStableView6493 />
      </__TamaguiNativeView>

      <Button {...linkProps} theme={'dark'}>
        Link to user
      </Button>

      <SheetDemo />
    </__TamaguiStableView5363>
  )
}

function SheetDemo() {
  const [open, setOpen] = useState(false)
  const [position, setPosition] = useState(0)

  return (
    <>
      <Button
        size="6"
        icon={open ? ChevronDown : ChevronUp}
        circular
        onPress={() => setOpen((x) => !x)}
      />
      <Sheet
        modal
        transition="medium"
        open={open}
        onOpenChange={setOpen}
        snapPoints={[80]}
        position={position}
        onPositionChange={setPosition}
        dismissOnSnapToBottom
      >
        <Sheet.Overlay bg="shadow4" transition="lazy" opacity="enter:0 exit:0" />
        <Sheet.Handle bg="color8" />
        <Sheet.Container items="center" justify="center" gap="10">
          <Sheet.Background bg="color2" />
          <__TamaguiNativeView style={__TamaguiNativeStyle7400._ ?? __TamaguiNativeStyle7400()}>
            <__TamaguiStableText7429 >Made by</__TamaguiStableText7429>
            <Anchor color="blue10" href="https://twitter.com/natebirdman" target="_blank">
              @natebirdman,
            </Anchor>
            <Anchor
              color="blue10"
              href="https://github.com/tamagui/tamagui"
              target="_blank"
              rel="noreferrer"
            >
              give it a ⭐️
            </Anchor>
          </__TamaguiNativeView>

          <Button
            size="6"
            circular
            icon={ChevronDown}
            onPress={() => {
              setOpen(false)
              toast('Sheet closed!', {
                description: 'Just showing how toast works...',
              })
            }}
          />
        </Sheet.Container>
      </Sheet>
    </>
  )
}

function __TamaguiNativeStyle658() { return __TamaguiNativeStyle658._ ?? (__TamaguiNativeStyle658._ = {"flexDirection":"column","gap":16}); } __TamaguiNativeStyle658();
const __TamaguiNativeView = require('react-native').View;
function __TamaguiNativeStyle681() { return __TamaguiNativeStyle681._ ?? (__TamaguiNativeStyle681._ = {"flexDirection":"row","width":"100%","alignItems":"center","gap":16}); } __TamaguiNativeStyle681();
function __TamaguiNativeStyle890() { return __TamaguiNativeStyle890._ ?? (__TamaguiNativeStyle890._ = {"flexDirection":"row","width":"100%","alignItems":"center","gap":16}); } __TamaguiNativeStyle890();
function __TamaguiNativeStyle2277() { return __TamaguiNativeStyle2277._ ?? (__TamaguiNativeStyle2277._ = {"flexDirection":"column","zIndex":10}); } __TamaguiNativeStyle2277();
function __TamaguiNativeStyle3703() { return __TamaguiNativeStyle3703._ ?? (__TamaguiNativeStyle3703._ = {"flexDirection":"column","position":"absolute","right":0,"top":0,"bottom":0,"alignItems":"center","justifyContent":"center","width":16,"pointerEvents":"none"}); } __TamaguiNativeStyle3703();
function __TamaguiNativeStyle4269() { return __TamaguiNativeStyle4269._ ?? (__TamaguiNativeStyle4269._ = {"flexDirection":"column","zIndex":10}); } __TamaguiNativeStyle4269();
function __TamaguiNativeStyle5363() { return __TamaguiNativeStyle5363._ ?? (__TamaguiNativeStyle5363._ = {"flexDirection":"column","flex":1,"justifyContent":"center","alignItems":"center","gap":32,"paddingTop":16,"paddingRight":16,"paddingBottom":16,"paddingLeft":16}); } __TamaguiNativeStyle5363();
const __TamaguiStableView5363 = require('@tamagui/core')._withStableStyle(__TamaguiNativeView, (_theme, expressions) => [__TamaguiNativeStyle5363._ ?? __TamaguiNativeStyle5363(), { "backgroundColor": _theme["background"]?.get() }], true, false);
function __TamaguiNativeStyle5822() { return __TamaguiNativeStyle5822._ ?? (__TamaguiNativeStyle5822._ = {"flexDirection":"row","gap":8}); } __TamaguiNativeStyle5822();
function __TamaguiNativeStyle6083() { return __TamaguiNativeStyle6083._ ?? (__TamaguiNativeStyle6083._ = {"flexDirection":"column","gap":16}); } __TamaguiNativeStyle6083();
function __TamaguiNativeStyle6108() { return __TamaguiNativeStyle6108._ ?? (__TamaguiNativeStyle6108._ = {"textTransform":"none","fontFamily":"InterBold","letterSpacing":-3,"fontSize":46,"lineHeight":56,"marginTop":0,"marginRight":0,"marginBottom":0,"marginLeft":0,"textAlign":"center"}); } __TamaguiNativeStyle6108();
const __TamaguiNativeText = require('react-native').Text;
const __TamaguiStableText6108 = require('@tamagui/core')._withStableStyle(__TamaguiNativeText, (_theme, expressions) => [__TamaguiNativeStyle6108._ ?? __TamaguiNativeStyle6108(), { "color": _theme["color11"]?.get() }], true, false);
function __TamaguiNativeStyle6195() { return __TamaguiNativeStyle6195._ ?? (__TamaguiNativeStyle6195._ = {"fontFamily":"Inter","letterSpacing":0,"fontSize":15,"lineHeight":27,"textAlign":"center"}); } __TamaguiNativeStyle6195();
const __TamaguiStableText6195 = require('@tamagui/core')._withStableStyle(__TamaguiNativeText, (_theme, expressions) => [__TamaguiNativeStyle6195._ ?? __TamaguiNativeStyle6195(), { "color": _theme["color10"]?.get() }], true, false);
function __TamaguiNativeStyle6346() { return __TamaguiNativeStyle6346._ ?? (__TamaguiNativeStyle6346._ = {"flexShrink":0,"borderTopWidth":0,"borderRightWidth":0,"borderBottomWidth":1,"borderLeftWidth":0,"flex":1,"height":0,"maxHeight":0,"borderStyle":"solid","transform":[{"translateY":-0.5}]}); } __TamaguiNativeStyle6346();
const __TamaguiStableView6346 = require('@tamagui/core')._withStableStyle(__TamaguiNativeView, (_theme, expressions) => [__TamaguiNativeStyle6346._ ?? __TamaguiNativeStyle6346(), { "borderTopColor": _theme["background-focus"]?.get(), "borderRightColor": _theme["background-focus"]?.get(), "borderBottomColor": _theme["background-focus"]?.get(), "borderLeftColor": _theme["background-focus"]?.get() }], true, false);
function __TamaguiNativeStyle6368() { return __TamaguiNativeStyle6368._ ?? (__TamaguiNativeStyle6368._ = {"fontFamily":"Inter","letterSpacing":0,"fontSize":15,"lineHeight":27,"textAlign":"center"}); } __TamaguiNativeStyle6368();
const __TamaguiStableText6368 = require('@tamagui/core')._withStableStyle(__TamaguiNativeText, (_theme, expressions) => [__TamaguiNativeStyle6368._ ?? __TamaguiNativeStyle6368(), { "color": _theme["color"]?.get() }], true, false);
function __TamaguiNativeStyle6493() { return __TamaguiNativeStyle6493._ ?? (__TamaguiNativeStyle6493._ = {"flexShrink":0,"borderTopWidth":0,"borderRightWidth":0,"borderBottomWidth":1,"borderLeftWidth":0,"flex":1,"height":0,"maxHeight":0,"borderStyle":"solid","transform":[{"translateY":-0.5}]}); } __TamaguiNativeStyle6493();
const __TamaguiStableView6493 = require('@tamagui/core')._withStableStyle(__TamaguiNativeView, (_theme, expressions) => [__TamaguiNativeStyle6493._ ?? __TamaguiNativeStyle6493(), { "borderTopColor": _theme["background-focus"]?.get(), "borderRightColor": _theme["background-focus"]?.get(), "borderBottomColor": _theme["background-focus"]?.get(), "borderLeftColor": _theme["background-focus"]?.get() }], true, false);
function __TamaguiNativeStyle7400() { return __TamaguiNativeStyle7400._ ?? (__TamaguiNativeStyle7400._ = {"flexDirection":"row","gap":8}); } __TamaguiNativeStyle7400();
function __TamaguiNativeStyle7429() { return __TamaguiNativeStyle7429._ ?? (__TamaguiNativeStyle7429._ = {"fontFamily":"Inter","letterSpacing":0,"fontSize":15,"lineHeight":27,"textAlign":"center"}); } __TamaguiNativeStyle7429();
const __TamaguiStableText7429 = require('@tamagui/core')._withStableStyle(__TamaguiNativeText, (_theme, expressions) => [__TamaguiNativeStyle7429._ ?? __TamaguiNativeStyle7429(), { "color": _theme["color"]?.get() }], true, false);"
`;

exports[`Package.json exports support > should build app package for both web and native targets > web-css 1`] = `"._fd-1155724988{flex-direction:column}._g-1012092611{gap:var(--c-space-4)}._fd-1289797684{flex-direction:row}._w-132203642{width:100%}._ai-1980109838{align-items:center}._zi-1175933931{z-index:10}._p-384527714{position:absolute}._r-1320283460{right:0px}._t-1224246557{top:0px}._b-964080337{bottom:0px}._jc-658029924{justify-content:center}._w-137381456{width:var(--c-size-4)}._pe-635873870{pointer-events:none}._pe-635873870>*{pointer-events:none}._fg-169839737{flex-grow:1}._fs-1866857425{flex-shrink:1}._fb-1628162253{flex-basis:0px}._g-1012092487{gap:var(--c-space-8)}._pt-39185609{padding-top:var(--c-space-4)}._pr-635101616{padding-right:var(--c-space-4)}._pb-245633347{padding-bottom:var(--c-space-4)}._pl-354517857{padding-left:var(--c-space-4)}._bc-1288965051{background-color:var(--background)}._g-1012092549{gap:var(--c-space-6)}._fw-381719595{flex-wrap:wrap}._p-1814547269{position:absolute}@media (min-width: 640px) {._p-1814547269._p-1814547269{position:relative}}._t-1257708669{top:var(--c-space-6)}@media (min-width: 640px) {._t-1257708669._t-1257708669{top:0px}}._g-1012092673{gap:var(--c-space-2)}._us-1298715756{user-select:auto;-webkit-user-select:auto;}._ws-45919554{white-space:normal}._tt-297848359{text-transform:var(--f-transform-8)}._ff-398910644{font-family:var(--f-family)}._fw-640945470{font-weight:var(--f-weight-10)}._ls-592447083{letter-spacing:var(--f-letterSpacing-10)}._fs-1933525972{font-size:var(--f-size-10)}._lh-1061045529{line-height:var(--f-lineHeight-10)}._c-1675133514{color:var(--color11)}._mt-1877295985{margin-top:0px}._mr-1445204022{margin-right:0px}._mb-541650463{margin-bottom:0px}._ml-1541834309{margin-left:0px}._ta-628280461{text-align:center}._fw-672061085{font-weight:var(--f-weight-4)}._ls-1643456874{letter-spacing:var(--f-letterSpacing-4)}._fs-893655883{font-size:var(--f-size-4)}._lh-1905435290{line-height:var(--f-lineHeight-4)}._c-1675133483{color:var(--color10)}._btw-442151971{border-top-width:0px}._brw-1074718372{border-right-width:0px}._bbw-1088826218{border-bottom-width:1px}._blw-829053253{border-left-width:0px}._h-1387441229{height:0px}._mh-706717453{max-height:0px}._ty-885232850{--t-y:-0.5px}:where(._t-77695993){--t-x:0px;--t-y:0px}._t-77695993{translate:var(--t-x, 0px) var(--t-y, 0px)}._btc-462111959{border-top-color:var(--background-focus)}._brc-167070178{border-right-color:var(--background-focus)}._bbc-984892067{border-bottom-color:var(--background-focus)}._blc-1251242433{border-left-color:var(--background-focus)}._bs-1746519034{border-style:solid}._bbs-452384145{border-bottom-style:solid}._c-533586090{color:var(--color)}"`;

exports[`Package.json exports support > should build app package for both web and native targets > web-optimized 1`] = `
"import "./_screen.css"
import {
  Adapt,
  Anchor,
  Button,
  type FontSizeTokens,
  getFontSize,
  H1,
  Label,
  Paragraph,
  Select,
  type SelectProps,
  Separator,
  Sheet,
  toast,
  XStack,
  YStack,
} from '@my/ui'
import { SwitchRouterButton } from '@my/ui/components/SwitchRouterButton'
import { SwitchThemeButton } from '@my/ui/components/SwitchThemeButton'
import { LinearGradient } from '@tamagui/linear-gradient'
import { Activity, Check, ChevronDown, ChevronUp } from '@tamagui/lucide-icons-2'
import React, { useState } from 'react'
import { Platform } from 'react-native'
import { useLink } from 'solito/navigation'

export function SelectDemo() {
  return (
    <div className="is_View _fd-1155724988 _g-1012092611">
      <div className="is_View _fd-1289797684 _w-132203642 _ai-1980109838 _g-1012092611"  >
        <Label htmlFor="select-demo-1" flex={1} minW={80}>
          Custom
        </Label>
        <SelectDemoItem id="select-demo-1" />
      </div>

      <div className="is_View _fd-1289797684 _w-132203642 _ai-1980109838 _g-1012092611"  >
        <Label htmlFor="select-demo-2" flex={1} minW={80}>
          Native
        </Label>
        <SelectDemoItem id="select-demo-2" native />
      </div>
    </div>
  )
}

export function SelectDemoItem(props: SelectProps & { trigger?: React.ReactNode }) {
  const [val, setVal] = React.useState('apple')

  return (
    <Select
      value={val}
      onValueChange={setVal}
      disablePreventBodyScroll
      zIndex={200000}
      {...props}
    >
      {props?.trigger || (
        <Select.Trigger maxWidth={220} iconAfter={ChevronDown}>
          <Select.Value placeholder="Something" />
        </Select.Trigger>
      )}

      <Adapt when="maxMd" platform="touch">
        <Sheet native={!!props.native} modal dismissOnSnapToBottom transition="medium">
          <Sheet.Container>
            <Sheet.Background />
            <Sheet.ScrollView>
              <Adapt.Contents />
            </Sheet.ScrollView>
          </Sheet.Container>
          <Sheet.Overlay
            backgroundColor="shadow-color"
            transition="lazy"
            opacity="enter:0 exit:0"
          />
        </Sheet>
      </Adapt>

      <Select.Content>
        <Select.ScrollUpButton
          items="center"
          justify="center"
          position="relative"
          width="100%"
          height="3"
        >
          <div className="is_View _fd-1155724988 _zi-1175933931">
            <ChevronUp size={20} />
          </div>
          <LinearGradient
            start={[0, 0]}
            end={[0, 1]}
            position="absolute"
            inset={0}
            colors={['background', 'transparent']}
          />
        </Select.ScrollUpButton>

        <Select.Viewport
          // to do animations:
          // transition="quick"
          // animateOnly={['transform', 'opacity']}
          // opacity="enter:0 exit:0"
          // y="enter:-10px exit:10px"
          minW={200}
        >
          <Select.Group>
            <Select.Label>Fruits</Select.Label>
            {/* for longer lists memoizing these is useful */}
            {React.useMemo(
              () =>
                items.map((item, i) => {
                  return (
                    <Select.Item
                      index={i}
                      key={item.name}
                      value={item.name.toLowerCase()}
                    >
                      <Select.ItemText>{item.name}</Select.ItemText>
                      <Select.ItemIndicator marginLeft="auto">
                        <Check size={16} />
                      </Select.ItemIndicator>
                    </Select.Item>
                  )
                }),
              [items]
            )}
          </Select.Group>
          {/* Native gets an extra icon */}
          {props.native && (
            <div
              className="is_View _fd-1155724988 _p-384527714 _r-1320283460 _t-1224246557 _b-964080337 _ai-1980109838 _jc-658029924 _w-137381456 _pe-635873870"







            >
              <ChevronDown size={getFontSize((props.size as FontSizeTokens) ?? true)} />
            </div>
          )}
        </Select.Viewport>

        <Select.ScrollDownButton
          items="center"
          justify="center"
          position="relative"
          width="100%"
          height="3"
        >
          <div className="is_View _fd-1155724988 _zi-1175933931">
            <ChevronDown size={20} />
          </div>
          <LinearGradient
            start={[0, 0]}
            end={[0, 1]}
            position="absolute"
            inset={0}
            colors={['transparent', 'background']}
          />
        </Select.ScrollDownButton>
      </Select.Content>
    </Select>
  )
}

const items = [
  { name: 'Apple' },
  { name: 'Pear' },
  { name: 'Blackberry' },
  { name: 'Peach' },
  { name: 'Apricot' },
  { name: 'Melon' },
  { name: 'Honeydew' },
  { name: 'Starfruit' },
  { name: 'Blueberry' },
  { name: 'Raspberry' },
  { name: 'Strawberry' },
  { name: 'Mango' },
  { name: 'Pineapple' },
  { name: 'Lime' },
  { name: 'Lemon' },
  { name: 'Coconut' },
  { name: 'Guava' },
  { name: 'Papaya' },
  { name: 'Orange' },
  { name: 'Grape' },
  { name: 'Jackfruit' },
  { name: 'Durian' },
]

export function HomeScreen({ pagesMode = false }: { pagesMode?: boolean }) {
  const linkTarget = pagesMode ? '/pages-example-user' : '/user'
  const linkProps = useLink({
    href: \`\${linkTarget}/nate\`,
  })

  return (
    <div className="is_View _fd-1155724988 _fg-169839737 _fs-1866857425 _fb-1628162253 _jc-658029924 _ai-1980109838 _g-1012092487 _pt-39185609 _pr-635101616 _pb-245633347 _pl-354517857 _bc-1288965051"     >
      <div
        className="is_View _fd-1289797684 _w-132203642 _g-1012092549 _jc-658029924 _fw-381719595 _p-1814547269 _t-1257708669"





      >
        {Platform.OS === 'web' && (
          <>
            <SwitchRouterButton pagesMode={pagesMode} />
            <SwitchThemeButton />
          </>
        )}
      </div>

      <SelectDemo />

      <div className="is_View _fd-1289797684 _g-1012092673">
        <Button
          size="3"
          iconAfter={
            <Button.Icon>
              <Activity />
            </Button.Icon>
          }
        >
          <Button.Text>Inverse</Button.Text>
        </Button>
      </div>
      <div className="is_View _fd-1155724988 _g-1012092611">
        <h1 className="is_Text font_heading tm-paragraph _us-1298715756 _ws-45919554 _tt-297848359 _ff-398910644 _fw-640945470 _ls-592447083 _fs-1933525972 _lh-1061045529 _c-1675133514 _mt-1877295985 _mr-1445204022 _mb-541650463 _ml-1541834309 _ta-628280461" >
          Welcome to Tamagui.
        </h1>
        <p className="is_Text font_body tm-paragraph _ff-398910644 _fw-672061085 _ls-1643456874 _fs-893655883 _lh-1905435290 _c-1675133483 _us-1298715756 _ws-45919554 _ta-628280461" >
          Here's a basic starter to show navigating from one screen to another.
        </p>
        <div className="is_View _fs-1866857425 _btw-442151971 _brw-1074718372 _bbw-1088826218 _blw-829053253 _fg-169839737 _fb-1628162253 _h-1387441229 _mh-706717453 _ty-885232850 _t-77695993 _btc-462111959 _brc-167070178 _bbc-984892067 _blc-1251242433 _bs-1746519034 _bbs-452384145" />
        <p className="is_Text font_body tm-paragraph _ff-398910644 _fw-672061085 _ls-1643456874 _fs-893655883 _lh-1905435290 _c-533586090 _us-1298715756 _ws-45919554 _ta-628280461">
          This screen uses the same code on Next.js and React Native.
        </p>
        <div className="is_View _fs-1866857425 _btw-442151971 _brw-1074718372 _bbw-1088826218 _blw-829053253 _fg-169839737 _fb-1628162253 _h-1387441229 _mh-706717453 _ty-885232850 _t-77695993 _btc-462111959 _brc-167070178 _bbc-984892067 _blc-1251242433 _bs-1746519034 _bbs-452384145" />
      </div>

      <Button {...linkProps} theme={'dark'}>
        Link to user
      </Button>

      <SheetDemo />
    </div>
  )
}

function SheetDemo() {
  const [open, setOpen] = useState(false)
  const [position, setPosition] = useState(0)

  return (
    <>
      <Button
        size="6"
        icon={open ? ChevronDown : ChevronUp}
        circular
        onPress={() => setOpen((x) => !x)}
      />
      <Sheet
        modal
        transition="medium"
        open={open}
        onOpenChange={setOpen}
        snapPoints={[80]}
        position={position}
        onPositionChange={setPosition}
        dismissOnSnapToBottom
      >
        <Sheet.Overlay bg="shadow4" transition="lazy" opacity="enter:0 exit:0" />
        <Sheet.Handle bg="color8" />
        <Sheet.Container items="center" justify="center" gap="10">
          <Sheet.Background bg="color2" />
          <div className="is_View _fd-1289797684 _g-1012092673">
            <p className="is_Text font_body tm-paragraph _ff-398910644 _fw-672061085 _ls-1643456874 _fs-893655883 _lh-1905435290 _c-533586090 _us-1298715756 _ws-45919554 _ta-628280461">Made by</p>
            <Anchor color="blue10" href="https://twitter.com/natebirdman" target="_blank">
              @natebirdman,
            </Anchor>
            <Anchor
              color="blue10"
              href="https://github.com/tamagui/tamagui"
              target="_blank"
              rel="noreferrer"
            >
              give it a ⭐️
            </Anchor>
          </div>

          <Button
            size="6"
            circular
            icon={ChevronDown}
            onPress={() => {
              setOpen(false)
              toast('Sheet closed!', {
                description: 'Just showing how toast works...',
              })
            }}
          />
        </Sheet.Container>
      </Sheet>
    </>
  )
}
"
`;

exports[`Package.json exports support > should recognize imports from path-specific exports during optimization > native-optimized-single 1`] = `
"import {
  Adapt,
  Anchor,
  Button,
  type FontSizeTokens,
  getFontSize,
  H1,
  Label,
  Paragraph,
  Select,
  type SelectProps,
  Separator,
  Sheet,
  toast,
  XStack,
  YStack,
} from '@my/ui'
import { SwitchRouterButton } from '@my/ui/components/SwitchRouterButton'
import { SwitchThemeButton } from '@my/ui/components/SwitchThemeButton'
import { LinearGradient } from '@tamagui/linear-gradient'
import { Activity, Check, ChevronDown, ChevronUp } from '@tamagui/lucide-icons-2'
import React, { useState } from 'react'
import { Platform } from 'react-native'
import { useLink } from 'solito/navigation'

export function SelectDemo() {
  return (
    <__TamaguiNativeView style={__TamaguiNativeStyle658._ ?? __TamaguiNativeStyle658()}>
      <__TamaguiNativeView style={__TamaguiNativeStyle681._ ?? __TamaguiNativeStyle681()}  >
        <Label htmlFor="select-demo-1" flex={1} minW={80}>
          Custom
        </Label>
        <SelectDemoItem id="select-demo-1" />
      </__TamaguiNativeView>

      <__TamaguiNativeView style={__TamaguiNativeStyle890._ ?? __TamaguiNativeStyle890()}  >
        <Label htmlFor="select-demo-2" flex={1} minW={80}>
          Native
        </Label>
        <SelectDemoItem id="select-demo-2" native />
      </__TamaguiNativeView>
    </__TamaguiNativeView>
  )
}

export function SelectDemoItem(props: SelectProps & { trigger?: React.ReactNode }) {
  const [val, setVal] = React.useState('apple')

  return (
    <Select
      value={val}
      onValueChange={setVal}
      disablePreventBodyScroll
      zIndex={200000}
      {...props}
    >
      {props?.trigger || (
        <Select.Trigger maxWidth={220} iconAfter={ChevronDown}>
          <Select.Value placeholder="Something" />
        </Select.Trigger>
      )}

      <Adapt when="maxMd" platform="touch">
        <Sheet native={!!props.native} modal dismissOnSnapToBottom transition="medium">
          <Sheet.Container>
            <Sheet.Background />
            <Sheet.ScrollView>
              <Adapt.Contents />
            </Sheet.ScrollView>
          </Sheet.Container>
          <Sheet.Overlay
            backgroundColor="shadow-color"
            transition="lazy"
            opacity="enter:0 exit:0"
          />
        </Sheet>
      </Adapt>

      <Select.Content>
        <Select.ScrollUpButton
          items="center"
          justify="center"
          position="relative"
          width="100%"
          height="3"
        >
          <__TamaguiNativeView style={__TamaguiNativeStyle2277._ ?? __TamaguiNativeStyle2277()}>
            <ChevronUp size={20} />
          </__TamaguiNativeView>
          <LinearGradient
            start={[0, 0]}
            end={[0, 1]}
            position="absolute"
            inset={0}
            colors={['background', 'transparent']}
          />
        </Select.ScrollUpButton>

        <Select.Viewport
          // to do animations:
          // transition="quick"
          // animateOnly={['transform', 'opacity']}
          // opacity="enter:0 exit:0"
          // y="enter:-10px exit:10px"
          minW={200}
        >
          <Select.Group>
            <Select.Label>Fruits</Select.Label>
            {/* for longer lists memoizing these is useful */}
            {React.useMemo(
              () =>
                items.map((item, i) => {
                  return (
                    <Select.Item
                      index={i}
                      key={item.name}
                      value={item.name.toLowerCase()}
                    >
                      <Select.ItemText>{item.name}</Select.ItemText>
                      <Select.ItemIndicator marginLeft="auto">
                        <Check size={16} />
                      </Select.ItemIndicator>
                    </Select.Item>
                  )
                }),
              [items]
            )}
          </Select.Group>
          {/* Native gets an extra icon */}
          {props.native && (
            <__TamaguiNativeView
              style={__TamaguiNativeStyle3703._ ?? __TamaguiNativeStyle3703()}







            >
              <ChevronDown size={getFontSize((props.size as FontSizeTokens) ?? true)} />
            </__TamaguiNativeView>
          )}
        </Select.Viewport>

        <Select.ScrollDownButton
          items="center"
          justify="center"
          position="relative"
          width="100%"
          height="3"
        >
          <__TamaguiNativeView style={__TamaguiNativeStyle4269._ ?? __TamaguiNativeStyle4269()}>
            <ChevronDown size={20} />
          </__TamaguiNativeView>
          <LinearGradient
            start={[0, 0]}
            end={[0, 1]}
            position="absolute"
            inset={0}
            colors={['transparent', 'background']}
          />
        </Select.ScrollDownButton>
      </Select.Content>
    </Select>
  )
}

const items = [
  { name: 'Apple' },
  { name: 'Pear' },
  { name: 'Blackberry' },
  { name: 'Peach' },
  { name: 'Apricot' },
  { name: 'Melon' },
  { name: 'Honeydew' },
  { name: 'Starfruit' },
  { name: 'Blueberry' },
  { name: 'Raspberry' },
  { name: 'Strawberry' },
  { name: 'Mango' },
  { name: 'Pineapple' },
  { name: 'Lime' },
  { name: 'Lemon' },
  { name: 'Coconut' },
  { name: 'Guava' },
  { name: 'Papaya' },
  { name: 'Orange' },
  { name: 'Grape' },
  { name: 'Jackfruit' },
  { name: 'Durian' },
]

export function HomeScreen({ pagesMode = false }: { pagesMode?: boolean }) {
  const linkTarget = pagesMode ? '/pages-example-user' : '/user'
  const linkProps = useLink({
    href: \`\${linkTarget}/nate\`,
  })

  return (
    <__TamaguiStableView5363      >
      <XStack
        position="absolute sm:relative"
        width="100%"
        t="6 sm:0px"
        gap="6"
        justify="center"
        flexWrap="wrap"
      >
        {Platform.OS === 'web' && (
          <>
            <SwitchRouterButton pagesMode={pagesMode} />
            <SwitchThemeButton />
          </>
        )}
      </XStack>

      <SelectDemo />

      <__TamaguiNativeView style={__TamaguiNativeStyle5822._ ?? __TamaguiNativeStyle5822()}>
        <Button
          size="3"
          iconAfter={
            <Button.Icon>
              <Activity />
            </Button.Icon>
          }
        >
          <Button.Text>Inverse</Button.Text>
        </Button>
      </__TamaguiNativeView>
      <__TamaguiNativeView style={__TamaguiNativeStyle6083._ ?? __TamaguiNativeStyle6083()}>
        <__TamaguiStableText6108  >
          Welcome to Tamagui.
        </__TamaguiStableText6108>
        <__TamaguiStableText6195  >
          Here's a basic starter to show navigating from one screen to another.
        </__TamaguiStableText6195>
        <__TamaguiStableView6346 />
        <__TamaguiStableText6368 >
          This screen uses the same code on Next.js and React Native.
        </__TamaguiStableText6368>
        <__TamaguiStableView6493 />
      </__TamaguiNativeView>

      <Button {...linkProps} theme={'dark'}>
        Link to user
      </Button>

      <SheetDemo />
    </__TamaguiStableView5363>
  )
}

function SheetDemo() {
  const [open, setOpen] = useState(false)
  const [position, setPosition] = useState(0)

  return (
    <>
      <Button
        size="6"
        icon={open ? ChevronDown : ChevronUp}
        circular
        onPress={() => setOpen((x) => !x)}
      />
      <Sheet
        modal
        transition="medium"
        open={open}
        onOpenChange={setOpen}
        snapPoints={[80]}
        position={position}
        onPositionChange={setPosition}
        dismissOnSnapToBottom
      >
        <Sheet.Overlay bg="shadow4" transition="lazy" opacity="enter:0 exit:0" />
        <Sheet.Handle bg="color8" />
        <Sheet.Container items="center" justify="center" gap="10">
          <Sheet.Background bg="color2" />
          <__TamaguiNativeView style={__TamaguiNativeStyle7400._ ?? __TamaguiNativeStyle7400()}>
            <__TamaguiStableText7429 >Made by</__TamaguiStableText7429>
            <Anchor color="blue10" href="https://twitter.com/natebirdman" target="_blank">
              @natebirdman,
            </Anchor>
            <Anchor
              color="blue10"
              href="https://github.com/tamagui/tamagui"
              target="_blank"
              rel="noreferrer"
            >
              give it a ⭐️
            </Anchor>
          </__TamaguiNativeView>

          <Button
            size="6"
            circular
            icon={ChevronDown}
            onPress={() => {
              setOpen(false)
              toast('Sheet closed!', {
                description: 'Just showing how toast works...',
              })
            }}
          />
        </Sheet.Container>
      </Sheet>
    </>
  )
}

function __TamaguiNativeStyle658() { return __TamaguiNativeStyle658._ ?? (__TamaguiNativeStyle658._ = {"flexDirection":"column","gap":16}); } __TamaguiNativeStyle658();
const __TamaguiNativeView = require('react-native').View;
function __TamaguiNativeStyle681() { return __TamaguiNativeStyle681._ ?? (__TamaguiNativeStyle681._ = {"flexDirection":"row","width":"100%","alignItems":"center","gap":16}); } __TamaguiNativeStyle681();
function __TamaguiNativeStyle890() { return __TamaguiNativeStyle890._ ?? (__TamaguiNativeStyle890._ = {"flexDirection":"row","width":"100%","alignItems":"center","gap":16}); } __TamaguiNativeStyle890();
function __TamaguiNativeStyle2277() { return __TamaguiNativeStyle2277._ ?? (__TamaguiNativeStyle2277._ = {"flexDirection":"column","zIndex":10}); } __TamaguiNativeStyle2277();
function __TamaguiNativeStyle3703() { return __TamaguiNativeStyle3703._ ?? (__TamaguiNativeStyle3703._ = {"flexDirection":"column","position":"absolute","right":0,"top":0,"bottom":0,"alignItems":"center","justifyContent":"center","width":16,"pointerEvents":"none"}); } __TamaguiNativeStyle3703();
function __TamaguiNativeStyle4269() { return __TamaguiNativeStyle4269._ ?? (__TamaguiNativeStyle4269._ = {"flexDirection":"column","zIndex":10}); } __TamaguiNativeStyle4269();
function __TamaguiNativeStyle5363() { return __TamaguiNativeStyle5363._ ?? (__TamaguiNativeStyle5363._ = {"flexDirection":"column","flex":1,"justifyContent":"center","alignItems":"center","gap":32,"paddingTop":16,"paddingRight":16,"paddingBottom":16,"paddingLeft":16}); } __TamaguiNativeStyle5363();
const __TamaguiStableView5363 = require('@tamagui/core')._withStableStyle(__TamaguiNativeView, (_theme, expressions) => [__TamaguiNativeStyle5363._ ?? __TamaguiNativeStyle5363(), { "backgroundColor": _theme["background"]?.get() }], true, false);
function __TamaguiNativeStyle5822() { return __TamaguiNativeStyle5822._ ?? (__TamaguiNativeStyle5822._ = {"flexDirection":"row","gap":8}); } __TamaguiNativeStyle5822();
function __TamaguiNativeStyle6083() { return __TamaguiNativeStyle6083._ ?? (__TamaguiNativeStyle6083._ = {"flexDirection":"column","gap":16}); } __TamaguiNativeStyle6083();
function __TamaguiNativeStyle6108() { return __TamaguiNativeStyle6108._ ?? (__TamaguiNativeStyle6108._ = {"textTransform":"none","fontFamily":"InterBold","letterSpacing":-3,"fontSize":46,"lineHeight":56,"marginTop":0,"marginRight":0,"marginBottom":0,"marginLeft":0,"textAlign":"center"}); } __TamaguiNativeStyle6108();
const __TamaguiNativeText = require('react-native').Text;
const __TamaguiStableText6108 = require('@tamagui/core')._withStableStyle(__TamaguiNativeText, (_theme, expressions) => [__TamaguiNativeStyle6108._ ?? __TamaguiNativeStyle6108(), { "color": _theme["color11"]?.get() }], true, false);
function __TamaguiNativeStyle6195() { return __TamaguiNativeStyle6195._ ?? (__TamaguiNativeStyle6195._ = {"fontFamily":"Inter","letterSpacing":0,"fontSize":15,"lineHeight":27,"textAlign":"center"}); } __TamaguiNativeStyle6195();
const __TamaguiStableText6195 = require('@tamagui/core')._withStableStyle(__TamaguiNativeText, (_theme, expressions) => [__TamaguiNativeStyle6195._ ?? __TamaguiNativeStyle6195(), { "color": _theme["color10"]?.get() }], true, false);
function __TamaguiNativeStyle6346() { return __TamaguiNativeStyle6346._ ?? (__TamaguiNativeStyle6346._ = {"flexShrink":0,"borderTopWidth":0,"borderRightWidth":0,"borderBottomWidth":1,"borderLeftWidth":0,"flex":1,"height":0,"maxHeight":0,"borderStyle":"solid","transform":[{"translateY":-0.5}]}); } __TamaguiNativeStyle6346();
const __TamaguiStableView6346 = require('@tamagui/core')._withStableStyle(__TamaguiNativeView, (_theme, expressions) => [__TamaguiNativeStyle6346._ ?? __TamaguiNativeStyle6346(), { "borderTopColor": _theme["background-focus"]?.get(), "borderRightColor": _theme["background-focus"]?.get(), "borderBottomColor": _theme["background-focus"]?.get(), "borderLeftColor": _theme["background-focus"]?.get() }], true, false);
function __TamaguiNativeStyle6368() { return __TamaguiNativeStyle6368._ ?? (__TamaguiNativeStyle6368._ = {"fontFamily":"Inter","letterSpacing":0,"fontSize":15,"lineHeight":27,"textAlign":"center"}); } __TamaguiNativeStyle6368();
const __TamaguiStableText6368 = require('@tamagui/core')._withStableStyle(__TamaguiNativeText, (_theme, expressions) => [__TamaguiNativeStyle6368._ ?? __TamaguiNativeStyle6368(), { "color": _theme["color"]?.get() }], true, false);
function __TamaguiNativeStyle6493() { return __TamaguiNativeStyle6493._ ?? (__TamaguiNativeStyle6493._ = {"flexShrink":0,"borderTopWidth":0,"borderRightWidth":0,"borderBottomWidth":1,"borderLeftWidth":0,"flex":1,"height":0,"maxHeight":0,"borderStyle":"solid","transform":[{"translateY":-0.5}]}); } __TamaguiNativeStyle6493();
const __TamaguiStableView6493 = require('@tamagui/core')._withStableStyle(__TamaguiNativeView, (_theme, expressions) => [__TamaguiNativeStyle6493._ ?? __TamaguiNativeStyle6493(), { "borderTopColor": _theme["background-focus"]?.get(), "borderRightColor": _theme["background-focus"]?.get(), "borderBottomColor": _theme["background-focus"]?.get(), "borderLeftColor": _theme["background-focus"]?.get() }], true, false);
function __TamaguiNativeStyle7400() { return __TamaguiNativeStyle7400._ ?? (__TamaguiNativeStyle7400._ = {"flexDirection":"row","gap":8}); } __TamaguiNativeStyle7400();
function __TamaguiNativeStyle7429() { return __TamaguiNativeStyle7429._ ?? (__TamaguiNativeStyle7429._ = {"fontFamily":"Inter","letterSpacing":0,"fontSize":15,"lineHeight":27,"textAlign":"center"}); } __TamaguiNativeStyle7429();
const __TamaguiStableText7429 = require('@tamagui/core')._withStableStyle(__TamaguiNativeText, (_theme, expressions) => [__TamaguiNativeStyle7429._ ?? __TamaguiNativeStyle7429(), { "color": _theme["color"]?.get() }], true, false);"
`;

exports[`Package.json exports support > should recognize imports from path-specific exports during optimization > web-optimized-single 1`] = `
"import "./_screen.css"
import {
  Adapt,
  Anchor,
  Button,
  type FontSizeTokens,
  getFontSize,
  H1,
  Label,
  Paragraph,
  Select,
  type SelectProps,
  Separator,
  Sheet,
  toast,
  XStack,
  YStack,
} from '@my/ui'
import { SwitchRouterButton } from '@my/ui/components/SwitchRouterButton'
import { SwitchThemeButton } from '@my/ui/components/SwitchThemeButton'
import { LinearGradient } from '@tamagui/linear-gradient'
import { Activity, Check, ChevronDown, ChevronUp } from '@tamagui/lucide-icons-2'
import React, { useState } from 'react'
import { Platform } from 'react-native'
import { useLink } from 'solito/navigation'

export function SelectDemo() {
  return (
    <div className="is_View _fd-1155724988 _g-1012092611">
      <div className="is_View _fd-1289797684 _w-132203642 _ai-1980109838 _g-1012092611"  >
        <Label htmlFor="select-demo-1" flex={1} minW={80}>
          Custom
        </Label>
        <SelectDemoItem id="select-demo-1" />
      </div>

      <div className="is_View _fd-1289797684 _w-132203642 _ai-1980109838 _g-1012092611"  >
        <Label htmlFor="select-demo-2" flex={1} minW={80}>
          Native
        </Label>
        <SelectDemoItem id="select-demo-2" native />
      </div>
    </div>
  )
}

export function SelectDemoItem(props: SelectProps & { trigger?: React.ReactNode }) {
  const [val, setVal] = React.useState('apple')

  return (
    <Select
      value={val}
      onValueChange={setVal}
      disablePreventBodyScroll
      zIndex={200000}
      {...props}
    >
      {props?.trigger || (
        <Select.Trigger maxWidth={220} iconAfter={ChevronDown}>
          <Select.Value placeholder="Something" />
        </Select.Trigger>
      )}

      <Adapt when="maxMd" platform="touch">
        <Sheet native={!!props.native} modal dismissOnSnapToBottom transition="medium">
          <Sheet.Container>
            <Sheet.Background />
            <Sheet.ScrollView>
              <Adapt.Contents />
            </Sheet.ScrollView>
          </Sheet.Container>
          <Sheet.Overlay
            backgroundColor="shadow-color"
            transition="lazy"
            opacity="enter:0 exit:0"
          />
        </Sheet>
      </Adapt>

      <Select.Content>
        <Select.ScrollUpButton
          items="center"
          justify="center"
          position="relative"
          width="100%"
          height="3"
        >
          <div className="is_View _fd-1155724988 _zi-1175933931">
            <ChevronUp size={20} />
          </div>
          <LinearGradient
            start={[0, 0]}
            end={[0, 1]}
            position="absolute"
            inset={0}
            colors={['background', 'transparent']}
          />
        </Select.ScrollUpButton>

        <Select.Viewport
          // to do animations:
          // transition="quick"
          // animateOnly={['transform', 'opacity']}
          // opacity="enter:0 exit:0"
          // y="enter:-10px exit:10px"
          minW={200}
        >
          <Select.Group>
            <Select.Label>Fruits</Select.Label>
            {/* for longer lists memoizing these is useful */}
            {React.useMemo(
              () =>
                items.map((item, i) => {
                  return (
                    <Select.Item
                      index={i}
                      key={item.name}
                      value={item.name.toLowerCase()}
                    >
                      <Select.ItemText>{item.name}</Select.ItemText>
                      <Select.ItemIndicator marginLeft="auto">
                        <Check size={16} />
                      </Select.ItemIndicator>
                    </Select.Item>
                  )
                }),
              [items]
            )}
          </Select.Group>
          {/* Native gets an extra icon */}
          {props.native && (
            <div
              className="is_View _fd-1155724988 _p-384527714 _r-1320283460 _t-1224246557 _b-964080337 _ai-1980109838 _jc-658029924 _w-137381456 _pe-635873870"







            >
              <ChevronDown size={getFontSize((props.size as FontSizeTokens) ?? true)} />
            </div>
          )}
        </Select.Viewport>

        <Select.ScrollDownButton
          items="center"
          justify="center"
          position="relative"
          width="100%"
          height="3"
        >
          <div className="is_View _fd-1155724988 _zi-1175933931">
            <ChevronDown size={20} />
          </div>
          <LinearGradient
            start={[0, 0]}
            end={[0, 1]}
            position="absolute"
            inset={0}
            colors={['transparent', 'background']}
          />
        </Select.ScrollDownButton>
      </Select.Content>
    </Select>
  )
}

const items = [
  { name: 'Apple' },
  { name: 'Pear' },
  { name: 'Blackberry' },
  { name: 'Peach' },
  { name: 'Apricot' },
  { name: 'Melon' },
  { name: 'Honeydew' },
  { name: 'Starfruit' },
  { name: 'Blueberry' },
  { name: 'Raspberry' },
  { name: 'Strawberry' },
  { name: 'Mango' },
  { name: 'Pineapple' },
  { name: 'Lime' },
  { name: 'Lemon' },
  { name: 'Coconut' },
  { name: 'Guava' },
  { name: 'Papaya' },
  { name: 'Orange' },
  { name: 'Grape' },
  { name: 'Jackfruit' },
  { name: 'Durian' },
]

export function HomeScreen({ pagesMode = false }: { pagesMode?: boolean }) {
  const linkTarget = pagesMode ? '/pages-example-user' : '/user'
  const linkProps = useLink({
    href: \`\${linkTarget}/nate\`,
  })

  return (
    <div className="is_View _fd-1155724988 _fg-169839737 _fs-1866857425 _fb-1628162253 _jc-658029924 _ai-1980109838 _g-1012092487 _pt-39185609 _pr-635101616 _pb-245633347 _pl-354517857 _bc-1288965051"     >
      <div
        className="is_View _fd-1289797684 _w-132203642 _g-1012092549 _jc-658029924 _fw-381719595 _p-1814547269 _t-1257708669"





      >
        {Platform.OS === 'web' && (
          <>
            <SwitchRouterButton pagesMode={pagesMode} />
            <SwitchThemeButton />
          </>
        )}
      </div>

      <SelectDemo />

      <div className="is_View _fd-1289797684 _g-1012092673">
        <Button
          size="3"
          iconAfter={
            <Button.Icon>
              <Activity />
            </Button.Icon>
          }
        >
          <Button.Text>Inverse</Button.Text>
        </Button>
      </div>
      <div className="is_View _fd-1155724988 _g-1012092611">
        <h1 className="is_Text font_heading tm-paragraph _us-1298715756 _ws-45919554 _tt-297848359 _ff-398910644 _fw-640945470 _ls-592447083 _fs-1933525972 _lh-1061045529 _c-1675133514 _mt-1877295985 _mr-1445204022 _mb-541650463 _ml-1541834309 _ta-628280461" >
          Welcome to Tamagui.
        </h1>
        <p className="is_Text font_body tm-paragraph _ff-398910644 _fw-672061085 _ls-1643456874 _fs-893655883 _lh-1905435290 _c-1675133483 _us-1298715756 _ws-45919554 _ta-628280461" >
          Here's a basic starter to show navigating from one screen to another.
        </p>
        <div className="is_View _fs-1866857425 _btw-442151971 _brw-1074718372 _bbw-1088826218 _blw-829053253 _fg-169839737 _fb-1628162253 _h-1387441229 _mh-706717453 _ty-885232850 _t-77695993 _btc-462111959 _brc-167070178 _bbc-984892067 _blc-1251242433 _bs-1746519034 _bbs-452384145" />
        <p className="is_Text font_body tm-paragraph _ff-398910644 _fw-672061085 _ls-1643456874 _fs-893655883 _lh-1905435290 _c-533586090 _us-1298715756 _ws-45919554 _ta-628280461">
          This screen uses the same code on Next.js and React Native.
        </p>
        <div className="is_View _fs-1866857425 _btw-442151971 _brw-1074718372 _bbw-1088826218 _blw-829053253 _fg-169839737 _fb-1628162253 _h-1387441229 _mh-706717453 _ty-885232850 _t-77695993 _btc-462111959 _brc-167070178 _bbc-984892067 _blc-1251242433 _bs-1746519034 _bbs-452384145" />
      </div>

      <Button {...linkProps} theme={'dark'}>
        Link to user
      </Button>

      <SheetDemo />
    </div>
  )
}

function SheetDemo() {
  const [open, setOpen] = useState(false)
  const [position, setPosition] = useState(0)

  return (
    <>
      <Button
        size="6"
        icon={open ? ChevronDown : ChevronUp}
        circular
        onPress={() => setOpen((x) => !x)}
      />
      <Sheet
        modal
        transition="medium"
        open={open}
        onOpenChange={setOpen}
        snapPoints={[80]}
        position={position}
        onPositionChange={setPosition}
        dismissOnSnapToBottom
      >
        <Sheet.Overlay bg="shadow4" transition="lazy" opacity="enter:0 exit:0" />
        <Sheet.Handle bg="color8" />
        <Sheet.Container items="center" justify="center" gap="10">
          <Sheet.Background bg="color2" />
          <div className="is_View _fd-1289797684 _g-1012092673">
            <p className="is_Text font_body tm-paragraph _ff-398910644 _fw-672061085 _ls-1643456874 _fs-893655883 _lh-1905435290 _c-533586090 _us-1298715756 _ws-45919554 _ta-628280461">Made by</p>
            <Anchor color="blue10" href="https://twitter.com/natebirdman" target="_blank">
              @natebirdman,
            </Anchor>
            <Anchor
              color="blue10"
              href="https://github.com/tamagui/tamagui"
              target="_blank"
              rel="noreferrer"
            >
              give it a ⭐️
            </Anchor>
          </div>

          <Button
            size="6"
            circular
            icon={ChevronDown}
            onPress={() => {
              setOpen(false)
              toast('Sheet closed!', {
                description: 'Just showing how toast works...',
              })
            }}
          />
        </Sheet.Container>
      </Sheet>
    </>
  )
}
"
`;
